2004-05-05  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkdnd-win32.c (gdk_drag_find_window_for_screen): Add
	multi-monitor offset. (#141842, John Ehresman)

2004-05-04  Federico Mena Quintero  <federico@ximian.com>

	Fixes #139562, based on a patch by Christian Neumair.

	* gtk/gtkfilechooserdefault.c (struct _GtkFileChooserDefault): Add
	a filter_combo_hbox field to contain the filter combo.
	(show_filters): Show/hide the filter_combo_hbox.
	(create_filename_entry_and_filter_combo): Removed.
	(file_pane_create): Create the filter_combo_hbox here.

2004-05-04  Matthias Clasen  <mclasen@redhat.com>

	* modules/input/gtkimcontextxim.c: Fix the recent
	string_conversion_callback change to work on 
	Solaris.  (#141190, Padraig O'Briain)

	* gtk/gtkselection.c: Disable debug logging again.

2004-05-03  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkselection.c: Make the chunk size for 
	incremental transfers depend on the maximal request 
	size, capped at 256k. This should allow most selections
	to be transferred nonincrementally, avoiding many
	roundtrips and protocol overhead.

2004-05-03  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkuimanager.c (gtk_ui_manager_class_init): Call
	g_signal_new() correctly and initialize the signal fields.  Fixes
	#141749; patch based on Michael Natterer's.

u2004-05-03  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkselection.c (_gtk_selection_request): Fix
	a debug message to show correct information.
	(_gtk_selection_incr_event): Make INCRemental transfer
	of MULTIPLE targets work. This was broken since 1997!

2004-05-02  Hans Breuer  <hans@breuer.org>

	* gdk/win32/gdkdrawable-win32.c (draw_segments) : don't
	modify the passed in GdkSegment(s) in place, we may get
	them again to draw at the same place. Fixes bug #129095, 
	bug #137177, ...
	(draw_segments) draw the end pixel again to get the 
	pixmap mask right, fixes bug #126710, #130202

	* gdk/win32/gdkwindow-win32.c : use SetForegroundWindow,